k8s-app/manifests/backend.yml
# resources needed: service, deployment
apiVersion: apps/v1
kind: Deployment 
metadata: 
  name: simple-backend 
  labels:
    tier: api 
spec:
  replicas: 2 
  selector: 
    matchLabels: 
      tier: api 
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 50% 
  template:
    metadata:
      labels:
        tier: api 
    spec:
      containers:
        - name: api
          image: lbabay.azurecr.io/simple-backend:v1.1
          ports:
            - containerPort: 3032
---
apiVersion: v1 
kind: Service 
metadata:
  name: apia
  labels:
    tier: api 
spec: 
  type: ClusterIP
  selector:
    tier: api 
  ports: 
    - port: 3032
      targetPort: 3032
