k8s-app/manifests/frontend.yml
apiVersion: apps/v1 
kind: Deployment 
metadata:
  name: frontend
  labels: 
    tier: frontend
spec:
  replicas: 1 
  selector:
    matchLabels:
      tier: frontend
  template:
    metadata: 
      labels: 
        tier: frontend
    spec:
      containers:
        - name: simple-app-frontend
          image: lbabay.azurecr.io/simple-frontend:v1.0 
---
apiVersion: v1 
kind: Service
metadata:
  name: frontend-service
spec:
  type: NodePort
  selector: 
    tier: frontend
  ports:
    - port: 80
      targetPort: 80 
      nodePort: 30010
