k8s-app/manifests/backend-ingress.yml
apiVersion: networking.k8s.io/v1 
kind: Ingress 
metadata:
  name: ingress-rules 
spec: 
  ingressClassName: nginx 
  rules:
    - host: simple-backend.info
      http:
        paths: 
        - path: /api/v1/get
          pathType: Prefix
          backend:
            service:
              name: api-service
              port: 
                number: 3032
