k8s-app/manifests/frontend-ingress.yml
apiVersion: networking.k8s.io/v1 
kind: Ingress 
metadata:
  name: ingress-rules 
spec: 
  ingressClassName: nginx 
  rules:
    - host: simple-app.info
      http:
        paths: 
        - path: / 
          pathType: Prefix 
          backend:
            service:
              name: frontend-service 
              port:
                number: 80
        - path: /api/v1/get
          pathType: Prefix
          backend:
            service:
              name: api-service
              port: 
                number: 3032
